# Codes

./: .gitignore
Assembly/exp2/: countbit.asm  max.asm  sum1-100.asm
Assembly/exp3/: function.asm  star.asm
Assembly/exp4/: score.asm
C#/learnCS/: Program.cs
CSharp/Comic/: Comic.cs  Program.cs
CSharp/learnCS/: Program.cs
CnC++/DSFinal/: Graph.cpp  SortTest.cpp  stest.cpp  timer.h  utils.cpp  utils.h
CnC++/DSHomeWork/: binarysearch.cpp  calculator.cpp  graph.cpp  queue_1.h  queue_2.h  sort.cpp  stack_2.h  top.cpp  treerecur.cpp
CnC++/Test/: test.cpp  test.i  test0.cpp  test1.cpp  testa.c  testa.s  testb.s
CnC++/lab/datalab-handout/: bits.c
Cpp/DSFinal/: SortTest.cpp  test.cpp  timer.h  utils.cpp
Cpp/DSHomeWork/: callnumber.cpp  consdata.cpp  matrix.cpp  search.cpp  stack_1.h  treeita.cpp  vegetable_array.cpp  vegetable_link.cpp
Cpp/DataStructureFrom0/: Tree.cpp
Cpp/Test/: test0.cpp  test1.cpp  test2.asm  test2.cpp
Cpp/datalab-handout/: a.out
Cpp/lab/datalab-handout/: tt.c
JavaScript/Nodejs/: .prettierrc  input.txt  main.js  main.mjs
JavaScript/Scripts/: class.js  test1.user.js
JavaScript/learnjs/: main.js
JavaScript/learnjs/fetchcsv/: index.html  process.js
OpenGL/: workspace.code-workspace
OpenGL/GLfrom0/: .clang-format  CMakeLists.txt
OpenGL/GLfrom0/resources/shaders/: light.glsl  lightedobj.glsl  manipshader.glsl  mixshader.glsl  rainbow.glsl  textureshader.glsl
OpenGL/GLfrom0/src/: case1.cpp  case2.cpp  case3.cpp  case4.cpp  debugtest.cpp  main.cpp  rainbow.cpp
OpenGL/MC1W-phase1/: CMakeLists.txt  MC1W-phase1.udb
OpenGL/MC1W-phase1/Source/: Application.cpp  Context.cpp  Main.cpp  Model.h
OpenGL/MC1W-phase1/Source/Player/: Player.cpp
OpenGL/MC1W-phase1/Source/Renderer/: QuadRenderer.cpp
OpenGL/MC1W-phase1/Source/Shaders/: BasicShader.h  Shader.h  ShaderLoader.cpp  ShaderLoader.h
OpenGL/MC1W-phase1/Source/Texture/: BasicTexture.h
OpenGL/Phase1/: makeinviron.cpp
OpenGL/tinyshader/: main.cpp  output.tga
Python/Comic/: comic.py  test.html  testreg
Python/HealthReport/: login.py  peek_html.html  test.http
Python/LearnOpenCV/LearnNumpy/: RandGen.ipynb
Python/LearnOpenCV/Section #1 - Basics/: MYTEST.py  basic_functions.py  contours.py  draw.py  read.py
Python/LearnOpenCV/Section #2 - Advanced/: rescale_resize.py
Python/MediQuery/: search.py  yao.txt
Python/Parse/: parse.py  save.txt  save2.txt
Python/Phy/: bole.py  formula.py
Python/RemDuplicate/: duplicate.py
Python/Word/: me.docx  pydoc.py  testdoc.doc
Python/learndjango/docdoc/: manage.py
Python/learndjango/mysite/: db.sqlite3
Python/stuff/: demo.docx  demo2.docx  form  header.txt  learnword.docx  pypy.py  pypy2 copy.py  pypy2.py  pypy3.py  save copy.html  src.html  srcfirst.html  urp.py
Verilog/Exp1/: Exp1.v  Exp1Test.v
Verilog/Exp2/: Exp2.v  Exp2Test.v
Verilog/Exp3/: Exp3.v  Exp3Test.v
Verilog/Exp4/: Exp4.v  Exp4Test.v
Verilog/Exp5/: Exp5.v  Exp5Test.v
Verilog/Exp6/: Exp6.v  Exp6Test.v
Verilog/Exp7/: Exp7.v  Exp7Test.v
Verilog/Exp8/: Exp8Test.v  adc_to_bcd.v  bcd_convert.v  bcdconvert.v  clock_div.v  counter.v  data_reader copy.v  data_reader.v  main.v  num.v  num_top.v  temp_propImpl.xdc
WorkWork/: func.cpp  test.c
(+13 files in other folders)
